--- a/stephanie.html
+++ b/stephanie.html
@@ -118,8 +118,7 @@
 </div>
 </section>
 <footer>
-    <h2>© 2023 by Shades of Pink.</h2>
-    <h3>Designed and created by Jordan Stephenson</h3>
+    <h3>© 2020 Jordan Stephenson - Freelance Web Designer</h3>
 </footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
 <script src="steph.js"></script>
